<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General App Strings -->
    <string name="app_name">Garrulo</string>
    <string name="service_name">Garrulo Listener Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>

    <!-- Main Activity Strings -->
    <string name="main_instructions">Garrulo will read SMS messages while enabled. To toggle whether Garrulo is enabled, tap the button above.</string>
    <string name="action_notify">Notify</string>
    <string name="action_start_notification_listening">Start Notification Listener</string>
    <string name="action_stop_notification_listening">Stop Notification Listener</string>
    <string name="action_test">Start Test</string>
    <string name="action_stop_test">Stop Test</string>
    <string name="notification_listener_access_title">Notification Access Needed</string>
    <string name="notification_listener_access_warning">Notification Listener access has not been granted to Garrulo. In order for the application to work properly, the Garrulo Listener Service needs to have access to notifications. Would you like to be directed to the Android Settings application to change this?</string>
    <string name="notification_listener_response_negative">No</string>
    <string name="notification_listener_response_positive">Yes</string>

    <!-- Spoken Strings -->
    <string name="new_message_from_prefix">New text message from </string>

    <!-- Settings Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_communication">Communication</string>
    <string name="pref_key_nfc_onoff">garrulo.nfc.enabled</string>
    <string name="pref_title_nfc_onoff">NFC (Near-Field Communication)</string>
    <string name="pref_summary_nfc_onoff">Turn on or off near-field communication</string>
    <string name="pref_key_nfc_polling_onoff">garrulo.nfc.polling.enabled</string>
    <string name="pref_title_nfc_polling_onoff">NFC Polling</string>
    <string name="pref_summary_nfc_polling_onoff">Check for NFC tags out of range of the device</string>
    <string name="pref_key_nfc_polling_frequency">garrulo.nfc.polling.frequency</string>
    <string name="pref_title_nfc_polling_frequency">Polling Frequency</string>
    <string name="pref_hint_nfc_polling_frequency">Minutes between checks (1 - &#8734;)</string>
    <plurals name="pref_summary_nfc_polling_frequency">
        <item quantity="one">Garrulo will check every minute to ensure the tag is available</item>
        <item quantity="other">Garrulo will check every %1$s minutes to ensure the tag is available</item>
    </plurals>
    <string name="pref_key_configure_nfc_tag">garrulo.nfc.tag.configure</string>
    <string name="pref_title_configure_nfc_tag">Configure NFC Tag</string>
    <string name="pref_summary_configure_nfc_tag">Configure an individual NFC tag to work with Garrulo</string>
    <string name="pref_nfc_not_available">NFC not available on this device</string>
    <string name="pref_nfc_settings_alert_title">NFC Disabled</string>
    <string name="pref_nfc_settings_alert_message">NFC is currently disabled in the system settings. Would you like to navigate to the system settings to turn it on?</string>
    <string name="pref_nfc_settings_negative">No</string>
    <string name="pref_nfc_settings_positive">Yes</string>

    <string name="pref_key_suppress_notification_sound">garrulo.notifications.sounds.suppress</string>
    <string name="pref_title_suppress_notification_sound">Suppress Default Notification</string>
    <string name="pref_summary_suppress_notification_sound">Turn on or off whether Garrulo should suppress the default notification when it handles a notification</string>
    <string name="pref_header_general_summary">General preferences related to Garrulo</string>
    <string name="pref_header_communication_summary">Preferences related to how Garrulo communicates with the outside world</string>
    <string name="pref_key_allow_ducking">garrulo.notifications.sounds.allowDucking</string>
    <string name="pref_title_allow_ducking">Allow Volume Ducking</string>
    <string name="pref_summary_allow_ducking">Turn on or off whether other apps that use audio should be allowed to continue playing if Garrulo needs to speak if they lower their volume (i.e. allow other apps to \"duck\").</string>


    <!-- Communicator Strings -->
    <string name="communicator_intent">com.glasstowerstudios.garrulo.LISTENER_COMMUNICATION</string>

    <!-- Main Activity Strings -->
    <string name="service_enabled">Enabled</string>
    <string name="service_disabled">Disabled</string>

    <!-- NFC Configuration Activity Strings -->
    <string name="nfc_configuration">NFC Configuration</string>
    <string name="nfc_id">NFC ID</string>
    <string name="nfc_bind_tag">Bind NFC Tag</string>
    <string name="nfc_unbind_tag">Unbind NFC Tag</string>
    <string name="nfc_tap_tag">Tap an NFC tag to configure it</string>
    <string name="nfc_writing">Writing to NFC tag&#8230;</string>

    <!-- URI Strings -->
    <string name="garrulo_play_store_uri">https://play.google.com/store/apps/details?id=com.glasstowerstudios.garrulo</string>
</resources>
